--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         footer {
             color: #000000;
-            paddingrgb(0, 0, 0)px;
+            padding: 0px;
             text-align: center;
             position: fixed;
             bottom: 0;
