make footer bigger

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             right: 0;
         }
 
+        footer p {
+            font-size: 25px; 
+            margin: 0;
+        }
+
+
         #movingStuhl {
             position: absolute;
             top: 20%;
@@ -63,7 +69,7 @@
     </header>
 
     <footer>
-        | <a href="https://discord.gg/placede">.gg/placDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> |
+        <p>  | <a href="https://discord.gg/placede">.gg/placDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> | </p>
     </footer>
 </body>
 </html>
