--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FÜR DEN STUHL.">
+    <meta name="keywords" content="stuhl, r/place, r/placede, placede">
     <title>.gg/placeDE</title>
         <style>
         body {
