--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <footer>
-        <p>  | <a href="https://discord.gg/placede">.gg/placeDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> | </p>
+        <p>  | <a href="https://discord.gg/placede">.gg/placeDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> | <a href="maimais.html">Memes</a> | </p>
     </footer>
 </body>
 </html>
