--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
 
     <footer>
-        <p>  | <a href="https://discord.gg/placede">.gg/placeDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> | </p>
+        <p> | <a href="Die_Geschichte_des_Spiderman-Stuhls.pdf">Geschichte</a> | <a href="https://discord.gg/placede">.gg/placeDE</a> | <a href="https://github.com/NoobSpielt/spidermanstuhl.de">Contribute</a> | </p>
     </footer>
 </body>
 </html>
